Update 16.Marea (we’ve lost dancing).html

--- a/16.Marea (we’ve lost dancing).html
+++ b/16.Marea (we’ve lost dancing).html
@@ -86,4 +86,118 @@
 <nav id="toc" aria-label="目次">
   <h2>目次</h2>
   <ul>
-    <li><a href="#episode">制作時のエピソード</a></
+    <li><a href="#episode">制作時のエピソード</a></li>
+    <li><a href="#lyrics">英語歌詞</a></li>
+    <li><a href="#translation">歌詞の和訳・意訳</a></li>
+    <li><a href="#references">参考情報</a></li>
+  </ul>
+</nav>
+
+<section id="episode">
+  <h2>制作時のエピソード</h2>
+  <p><strong>“Marea (we’ve lost dancing)”</strong>は、Fred again..とイギリスのDJ／プロデューサーThe Blessed Madonna（本名Marea Stamper）によるコラボレーション作品で、2021年2月22日にリリースされました。Fred again..の代表作の一つであり、COVID-19パンデミック中のクラブ閉鎖やダンス文化の喪失を背景に制作されたエモーショナルなトラックです。</p>
+  <p>制作のきっかけは、パンデミック禍においてFred again..とThe Blessed MadonnaがZoom通話などで会話を重ね、そのやりとりの断片を録音して楽曲のボーカルサンプルに使用したことです。こうした生の会話の断片は楽曲にリアリティと温かみを与え、聴く者に共感を生みました。</p>
+  <p>プロデューサーとしてはFred again..のほか、Alex Gibson（Boston Bun）も参加し、シンプルながらも印象的なビートにFredの繊細な音楽性が融合し、独特のエモーショナルな質感を構築しています。</p>
+  <p>リリース後、この曲はCOVID-19によるクラブ文化の停滞への追悼と再生の希望として、多くのリスナーから支持されました。また、2021年夏にはDiploによるリミックスも発表され、楽曲のメッセージと魅力はさらに広がっています。</p>
+</section>
+
+<section id="lyrics">
+  <h2>英語歌詞</h2>
+  <pre>
+[Intro: The Blessed Madonna]  
+We've lost dancing (lost dancing)  
+This year we've had to lose our space, we've lost dancing  
+
+[Verse: The Blessed Madonna]  
+We've lost dancing  
+All these things that we took for granted  
+We've lost dancing  
+We've lost the hugs with friends and people that we loved  
+
+[Pre-Chorus: The Blessed Madonna]  
+If I can live through this next six months  
+Day by day, if I can live through this  
+What comes next will be marvellous  
+
+[Chorus: The Blessed Madonna]  
+We've lost dancing  
+We've lost dancing, we've lost dancing  
+We gon' make it through  
+
+[Bridge/Drop: The Blessed Madonna]  
+Lost, lost (dancing), lost, lost (dancing)  
+We've lost dancing  
+We gon' make it through  
+
+[Outro: The Blessed Madonna]  
+What comes next will be marvellous
+  </pre>
+</section>
+
+<section id="translation">
+  <h2>歌詞の和訳・意訳</h2>
+  <p><strong>直訳</strong></p>
+  <p>
+    〈イントロ〉<br>
+    「私たちはダンスを失った（ダンスを失った）<br>
+    今年は私たちの場所を失い、ダンスを失った」
+  </p>
+  <p>
+    〈ヴァース〉<br>
+    「私たちはダンスを失った<br>
+    当たり前と思っていたすべてのものを失った<br>
+    私たちはダンスを失った<br>
+    友人や愛した人との抱擁も失った」
+  </p>
+  <p>
+    〈プレコーラス〉<br>
+    「もしこの先6ヶ月を乗り越えられたら<br>
+    一日一日を生き抜けたら<br>
+    その先には素晴らしいものが待っているだろう」
+  </p>
+  <p>
+    〈コーラス〉<br>
+    「私たちはダンスを失った<br>
+    それでも私たちは乗り越える」
+  </p>
+  <p>
+    〈ブリッジ／ドロップ〉<br>
+    「失くした、失った（ダンスを）<br>
+    それでも私たちは乗り越える」
+  </p>
+  <p>
+    〈アウトロ〉<br>
+    「これから来るものは素晴らしいだろう」
+  </p>
+
+  <p><strong>意訳・解説</strong></p>
+  <p>
+    “Marea (we’ve lost dancing)”は、COVID-19パンデミックによってクラブやダンスフロア、そしてその文化そのものが失われてしまった悲しみや喪失感を、率直に表現した作品です。
+  </p>
+  <p>
+    「ダンスを失った」というフレーズは、単に踊る行為だけでなく、コミュニティや人とのつながり、精神の解放まで含めた失われたものすべてを象徴しています。
+  </p>
+  <p>
+    しかしその一方で、プレコーラスでは「今の苦しい時期を乗り越えられれば、必ず素晴らしい未来が訪れる」という強い希望と励ましを込めています。失ったものの大きさを認識しつつも、未来への明るい展望を描いたヒーリング的なメッセージソングとなっています。
+  </p>
+  <p>
+    Fred again..の制作手法の特徴である「リアルな日常の断片を音楽に取り込む」ことと、この時代ならではの社会的背景が融合し、多くの人々に共感と慰めをもたらした代表的なトラックです。
+  </p>
+</section>
+
+<section id="references">
+  <h2>参考情報</h2>
+  <ul>
+    <li><a href="https://en.wikipedia.org/wiki/Marea_(We've_Lost_Dancing)" target="_blank" rel="noopener noreferrer">Wikipedia - Marea (We've Lost Dancing)</a></li>
+    <li><a href="https://songteksten.net/lyric/9706/104522/fred-again/marea-weve-lost-dancing.html" target="_blank" rel="noopener noreferrer">Song Lyrics - Marea (We've Lost Dancing)</a></li>
+  </ul>
+</section>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
+
+</body>
+</html>
