--- a/17.Billie (loving arms).html
+++ b/17.Billie (loving arms).html
@@ -171,6 +171,9 @@ That's all you gotta do
     これは単なるダンスミュージックに留まらず、ヒーリング的な側面を持ち合わせ、現代の多くのリスナーに寄り添う作品となっています。
   </p>
 </section>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 </body>
 </html>
