Update 18.Marco (and everyone).html

--- a/18.Marco (and everyone).html
+++ b/18.Marco (and everyone).html
@@ -80,6 +80,9 @@
 </style>
 </head>
 <body>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 <h1>Marco (and everyone) – 楽曲詳細解説</h1>
 
@@ -162,6 +165,9 @@ You make me feel alive...
     Fred again..の制作スタイルの特徴である「生の声の断片」と「精巧な音響編集」が高いレベルで融合した、エレクトロニック・エモーショナルダンスの傑作といえるでしょう。
   </p>
 </section>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 </body>
 </html>
