Update 2.Bleu (better with time).html

--- a/2.Bleu (better with time).html
+++ b/2.Bleu (better with time).html
@@ -78,6 +78,9 @@
 </style>
 </head>
 <body>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 <h1>Bleu (better with time) – 楽曲詳細解説</h1>
 
@@ -183,6 +186,9 @@ Alright, alright
   <p>Fred again..はサンプリング素材に自身の経験を重ねて「他者の声」を通じた自己表現を展開しており、デジタル世代の孤独感や断片的な繋がりを反映しつつ、多くのリスナーが共感できる普遍的なテーマの楽曲に仕上げられています。</p>
 
 </section>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 </body>
 </html>
