--- a/3.glow.html
+++ b/3.glow.html
@@ -70,6 +70,9 @@
 </style>
 </head>
 <body>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 <h1>glow – 楽曲詳細解説</h1>
 
@@ -108,6 +111,9 @@
   </ul>
   <p>総じて、“glow”は夜通し踊りつつも内面の揺らぎや輝きを感じさせる、情緒豊かで深みのあるダンスミュージックの新たな形を示した作品です。</p>
 </section>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 </body>
 </html>
