--- a/4.adore u.html
+++ b/4.adore u.html
@@ -78,6 +78,9 @@
 </style>
 </head>
 <body>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 <h1>adore u – 楽曲詳細解説</h1>
 
@@ -189,6 +192,9 @@ Ooh, I adore you
   <p>Fred again..のプロダクションは、Obongjayarのソウルフルなボーカルと繊細なシンセビートが調和し、感情豊かでありながらもダンサブルなトラックとして結実しています。</p>
   <p>この曲は、兄妹間の絆、尊敬、支え合いを象徴しながら、聴く者へ普遍的な愛と希望を届ける作品となっています。</p>
 </section>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 </body>
 </html>
