--- a/5.places to be.html
+++ b/5.places to be.html
@@ -72,6 +72,9 @@
 </style>
 </head>
 <body>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 <h1>“places to be” – 詳細解説</h1>
 
@@ -184,6 +187,9 @@
     <li><a href="https://www.boomplay.com/lyrics/169147081" target="_blank" rel="noopener noreferrer">Boomplay - places to be 歌詞</a></li>
   </ul>
 </section>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 </body>
 </html>
