--- a/9.Rumble.html
+++ b/9.Rumble.html
@@ -78,6 +78,9 @@
 </style>
 </head>
 <body>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 <h1>Rumble – 楽曲詳細解説</h1>
 
@@ -202,6 +205,9 @@ DJ, pull up the tune, bun up the room, straight to the moon again
     Fred again..とSkrillexのプロダクションは、グライムとジャングル／ダブステップのハードなビートとエレクトロニック・サウンドの最新モードを見事に融合し、現代ダンスミュージックの最前線を提示しています。
   </p>
 </section>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 </body>
 </html>
