Update 17.Billie (loving arms).html

--- a/17.Billie (loving arms).html
+++ b/17.Billie (loving arms).html
@@ -78,7 +78,9 @@
 </style>
 </head>
 <body>
-
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 <h1>Billie (loving arms) – 楽曲詳細解説</h1>
 
 <nav id="toc" aria-label="目次">
