--- a/1.Kyle (I Found You).html
+++ b/1.Kyle (I Found You).html
@@ -84,8 +84,8 @@
 
 <h1>Kyle (I Found You) – 楽曲詳細解説</h1>
 
-<nav id="toc" aria-label="目次">
-  <h2>目次</h2>
+<nav id="toc" aria-label="トピック">
+  <h2>トピック</h2>
   <ul>
     <li><a href="#episode">制作時のエピソード</a></li>
     <li><a href="#lyrics-en">リリック（英語原文）</a></li>
