--- a/10.peace u need.html
+++ b/10.peace u need.html
@@ -84,8 +84,8 @@
 
 <h1>peace u need – 楽曲詳細解説</h1>
 
-<nav id="toc" aria-label="目次">
-  <h2>目次</h2>
+<nav id="toc" aria-label="トピック">
+  <h2>トピック</h2>
   <ul>
     <li><a href="#episode">制作時のエピソード</a></li>
     <li><a href="#lyrics">英語歌詞（主要パート）</a></li>
