--- a/12.Turn On the Lights again...html
+++ b/12.Turn On the Lights again...html
@@ -76,8 +76,8 @@
 
 <h1>Turn On the Lights again.. – 楽曲詳細解説</h1>
 
-<nav id="toc" aria-label="目次">
-  <h2>目次</h2>
+<nav id="toc" aria-label="トピック">
+  <h2>トピック</h2>
   <ul>
     <li><a href="#episode">制作時のエピソード</a></li>
     <li><a href="#lyrics">英語歌詞</a></li>
