--- a/19.Delilah (pull me out of this).html
+++ b/19.Delilah (pull me out of this).html
@@ -78,8 +78,8 @@
 
 <h1>Delilah (pull me out of this) – 楽曲詳細解説</h1>
 
-<nav id="toc" aria-label="目次">
-  <h2>目次</h2>
+<nav id="toc" aria-label="トピック">
+  <h2>トピック</h2>
   <ul>
     <li><a href="#episode">制作時のエピソード</a></li>
     <li><a href="#lyrics">英語歌詞（主要パート）</a></li>
