Update 2.Bleu (better with time).html

--- a/2.Bleu (better with time).html
+++ b/2.Bleu (better with time).html
@@ -84,8 +84,8 @@
 
 <h1>Bleu (better with time) – 楽曲詳細解説</h1>
 
-<nav id="toc" aria-label="目次">
-  <h2>目次</h2>
+<nav id="toc" aria-label="トピック">
+  <h2>トピック</h2>
   <ul>
     <li><a href="#episode">制作時のエピソード</a></li>
     <li><a href="#lyrics-en">英語歌詞</a></li>
