Update 5.places to be.html

--- a/5.places to be.html
+++ b/5.places to be.html
@@ -78,8 +78,8 @@
 
 <h1>“places to be” – 詳細解説</h1>
 
-<nav id="toc" aria-label="目次">
-  <h2>目次</h2>
+<nav id="toc" aria-label="トピック">
+  <h2>トピック</h2>
   <ul>
     <li><a href="#points">主なポイント</a></li>
     <li><a href="#production">制作時のエピソード</a></li>
