--- a/6.Victory Lap.html
+++ b/6.Victory Lap.html
@@ -87,8 +87,8 @@
 
 <h1>Victory Lap – 詳細解説</h1>
 
-<nav id="toc" aria-label="目次">
-  <h2>目次</h2>
+<nav id="toc" aria-label="トピック">
+  <h2>トピック</h2>
   <ul>
     <li><a href="#points">主なポイント</a></li>
     <li><a href="#collaborators">コラボレーター</a></li>
