--- a/8.Jungle.html
+++ b/8.Jungle.html
@@ -84,8 +84,8 @@
 
 <h1>Jungle – 詳細解説</h1>
 
-<nav id="toc" aria-label="目次">
-  <h2>目次</h2>
+<nav id="toc" aria-label="トピック">
+  <h2>トピック</h2>
   <ul>
     <li><a href="#summary">主張／概要</a></li>
     <li><a href="#release">リリースと初披露</a></li>
