--- a/目次.html
+++ b/目次.html
@@ -37,6 +37,8 @@
       <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
 /1.Kyle (I Found You).html">1.Kyle (I Found You)</a></li>
       <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
+/1.Kyle (I Found You).html">1.Kyle (I Found You)</a></li>
+      <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
 /2.Bleu (better with time).html">2.Bleu (better with time)</a></li>
       <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
 /3.glow.html">3.glow</a></li>
