--- a/目次.html
+++ b/目次.html
@@ -35,7 +35,7 @@
     <h1>目次</h1>
     <ul>
       <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
-/1.Kyle (I Found You).html">1.Kyle (I Found You)</a></li>
+/Fred again..とは？.html">Fred again..とは？</a></li>
       <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
 /1.Kyle (I Found You).html">1.Kyle (I Found You)</a></li>
       <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
