--- a/Fred again..とは？.html
+++ b/Fred again..とは？.html
@@ -41,6 +41,9 @@
   </style>
 </head>
 <body>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 <h1>Fred again.. (フレッド・アゲイン) 来歴・特異性レポート</h1>
 
 <h2>概要</h2>
@@ -186,6 +189,8 @@
 </table>
 
 <p>Fred again..は、日常の瞬間を芸術に昇華させる革新的なアプローチと、ソーシャルメディアを駆使したファンとの直接的な関係構築により、現代電子音楽界における最も影響力のあるアーティストの一人として確固たる地位を築いている。彼の音楽は技術的革新性と深い感情的共鳴を両立させ、新世代のクラブカルチャーを形作り続けている。</p>
-
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 </body>
 </html>
