--- a/目次.html
+++ b/目次.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>目次</title>
+  <title>Fred again.. FUJIROCK2025全曲解説</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -31,8 +31,8 @@
   </style>
 </head>
 <body>
-  <nav id="toc" aria-label="目次">
-    <h1>目次</h1>
+  <nav id="toc" aria-label="Fred again.. FUJIROCK2025全曲解説">
+    <h1>Fred again.. FUJIROCK2025全曲解説</h1>
     <ul>
       <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
 /Fred again..とは？.html">Fred again..とは？</a></li>
